--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,14 @@ dependencies:
   provider: ^6.0.2
   hive: ^2.1.0
   hive_flutter: ^1.1.0
+  sqflite: ^2.0.2+1
+  sqflite_common_ffi: ^2.1.1
+  sqlite3_flutter_libs: ^0.5.7
+  path: ^1.8.1
+  path_provider: ^2.0.10
 dev_dependencies:
   flutter_test:
     sdk: flutter
 flutter:
   uses-material-design: true
+  generate: true
