--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   sqlite3_flutter_libs: ^0.5.7
   path: ^1.8.1
   path_provider: ^2.0.10
+  meta: ^1.7.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
