--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter 
   cupertino_icons: ^1.0.4
-  fluent_ui: ^3.12.0
-  fluentui_icons: ^1.0.0
-  fluentui_system_icons: ^1.1.168
+  font_awesome_flutter: ^10.1.0
   google_fonts: ^2.3.2
   units_converter: ^1.2.0
   provider: ^6.0.2
