--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
       path: plugins/window_size
       ref: a738913c8ce2c9f47515382d40827e794a334274
   flutter_localized_locales: ^2.0.3
+  package_info_plus: ^1.4.2
 flutter:
   uses-material-design: true
   generate: true
