--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,11 @@ dependencies:
   path: ^1.8.1
   path_provider: ^2.0.10
   meta: ^1.7.0
-  window_manager: ^0.2.3
+  window_size:
+    git:
+      url: https://github.com/google/flutter-desktop-embedding.git
+      path: plugins/window_size
+      ref: a738913c8ce2c9f47515382d40827e794a334274
   flutter_localized_locales: ^2.0.3
   package_info_plus: ^1.4.2
 flutter:
