--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,6 @@ dependencies:
   cupertino_icons: ^1.0.4
   font_awesome_flutter: ^10.1.0
   google_fonts: ^2.3.2
-  units_converter: ^1.2.0
   provider: ^6.0.2
   hive: ^2.1.0
   hive_flutter: ^1.1.0
@@ -31,6 +30,8 @@ dependencies:
   flutter_localized_locales: ^2.0.3
   package_info_plus: ^1.4.2
   flutter_window_close: ^0.2.2
+  quiver: ^3.1.0
+  mime: ^1.0.2
 flutter:
   uses-material-design: true
   generate: true
