--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   quiver: ^3.1.0
   mime: ^1.0.2
   lzma: ^1.0.1
+  collection: ^1.16.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
