--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   collection: ^1.16.0
   csv: ^5.0.1
   pointycastle: ^3.6.0
+  toggle_switch: ^2.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
