Remove fancy input

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   csv: ^5.0.1
   pointycastle: ^3.6.0
   toggle_switch: ^2.0.1
+  wheel_chooser: ^1.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
