--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "local"]
-	path = local
-	url = https://github.com/rk0cc/anitemp_local.git
+	path = locale
+	url = https://github.com/rk0cc/anitemp_locale.git
 [submodule "wiki"]
 	path = wiki
 	url = https://github.com/rk0cc/anitemp.wiki.git
