--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.ico filter=lfs diff=lfs merge=lfs -text
+fonts/**/*.ttf filter=lfs diff=lfs merge=lfs -text
+fonts/**/*.otf filter=lfs diff=lfs merge=lfs -text
+fonts/**/*.ttc filter=lfs diff=lfs merge=lfs -text
