--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   date_field: ^3.0.1
   intl: ^0.17.0
   flutter_native_splash: ^2.2.1
+  crop_image: ^1.0.2
+  image: ^3.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
