--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_native_splash: ^2.2.1
   crop_image: ^1.0.2
   image: ^3.2.0
+  sn_progress_dialog: ^1.0.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
