--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   crop_image: ^1.0.2
   image: ^3.2.0
   sn_progress_dialog: ^1.0.8
+  remove_emoji: ^0.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
