--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="xyz.rk0cc.anitemp">
    <application
+        android:requestLegacyExternalStorage="true"
         android:label="anitemp"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
