--- a/.licrc
+++ b/.licrc
@@ -2,4 +2,4 @@
 unaccepted = ["MS-PL", "MS-RL", "APSL", "AGPL"]
 
 [behavior]
-run_only_on_dependency_modification = false
+run_only_on_dependency_modification = true
